--- a/src/components/NewsCard/News.css
+++ b/src/components/NewsCard/News.css
@@ -37,8 +37,6 @@
     bottom: 1vh;
     right: 6vh;
     padding-right: 5px;
-    display: flex;
-    justify-content: space-between;
 }
 .hover__text1 > h1 {
     position: relative;
@@ -50,6 +48,10 @@
     padding: 1.5957446808510638vw;
     left: 35%;
     color: #A3C891;
+}
+.hover__text1 > h1 > span {
+    padding-top: 2px;
+    padding-left: 2px;
 }
 
 .date__card-arabic {
